feat: register auth handler, auth routes, auth grpc client and create auth api spec
