# api/router/router.go
@@ -10,8 +10,11 @@ func New(h handler.Handlers) *gin.Engine {
 	r := gin.Default()
 	v1 := r.Group("/api/v1")
 	{
+		// Customer routes
 		v1.POST("/account/create", h.Customer.AccountCreation)
 		v1.GET("/account/inquiry", h.Customer.AccountInquiry)
+		// Auth routes
+		v1.POST("/auth/token", h.Auth.GetToken)
 	}
 	return r
 }
